# glossary-documents

./: .gitignore  Makefile  README.md  docker-compose.yml  firebase.json  package.json  pyproject.toml
functions/: .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts  setDocuments.ts
src/application/documents/: usecase.py
src/cmd/embedding/: main.py
src/domain/model/documents/: document.py  documents_repository.py
src/embedding/: main.py
src/embedding/sql/: supabase.sql
src/infrastructure/supabase/: supabase_documents_repository.py
src/middleware/: di.py
terraform/: .terraform.lock.hcl  main.tf  provider.tf
terraform/modules/firebase/firestore/: api.tf  firestore.tf  rule.tf
terraform/modules/firebase/project/: project.tf  variables.tf
terraform/modules/firebase/storage/: api.tf  rule.tf  storage.tf
