[project]
name = "glossary-documents"
version = "0.1.0"
description = "Create store for Glossary documents"
dependencies = []
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
