[project]
name = "glossary-documents"
version = "0.1.0"
description = "Create store for Glossary documents"
dependencies = [
    "python-dotenv~=1.0.0",
    "supabase~=1.0.4",
    "langchain~=0.3.4",
    "openai~=0.28.0",
    "tiktoken~=0.5.1",
    "injector~=0.21.0",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
